--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -753,6 +753,22 @@
                                     <action selector="memberRegistrationButtonTapped:" destination="axT-Ie-suQ" eventType="touchUpInside" id="ja4-Fj-GmG"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Tgg-ba-Si6">
+                                <rect key="frame" x="157" y="398" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="BN2-hr-HOx"/>
+                                    <constraint firstAttribute="height" constant="100" id="JDP-yU-miP"/>
+                                </constraints>
+                                <color key="color" systemColor="systemRedColor"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ta-vy-FZI">
+                                <rect key="frame" x="107" y="506" width="200" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="didTapSendSignInLink:" destination="axT-Ie-suQ" eventType="touchUpInside" id="uhC-N3-MXl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6On-k4-La9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -761,6 +777,7 @@
                             <constraint firstItem="6On-k4-La9" firstAttribute="trailing" secondItem="Wbp-ct-wEh" secondAttribute="trailing" constant="24" id="7kj-qQ-mpM"/>
                             <constraint firstItem="6On-k4-La9" firstAttribute="trailing" secondItem="pzq-Vy-ru1" secondAttribute="trailing" constant="24" id="8pm-7h-Lc9"/>
                             <constraint firstItem="Bd1-g2-fzK" firstAttribute="top" secondItem="pzq-Vy-ru1" secondAttribute="bottom" constant="20" id="BMx-tU-B3A"/>
+                            <constraint firstItem="Tgg-ba-Si6" firstAttribute="centerX" secondItem="l27-5w-bqM" secondAttribute="centerX" id="Gj3-cI-e2y"/>
                             <constraint firstItem="Wbp-ct-wEh" firstAttribute="top" secondItem="Olg-Bz-G06" secondAttribute="bottom" constant="10" id="H1h-0o-HMP"/>
                             <constraint firstItem="6On-k4-La9" firstAttribute="trailing" secondItem="cup-Gn-1Mf" secondAttribute="trailing" constant="24" id="IEP-MR-kgI"/>
                             <constraint firstItem="cup-Gn-1Mf" firstAttribute="leading" secondItem="6On-k4-La9" secondAttribute="leading" constant="24" id="Ico-W9-NH7"/>
@@ -771,6 +788,7 @@
                             <constraint firstItem="pzq-Vy-ru1" firstAttribute="top" secondItem="MAo-KW-Kc4" secondAttribute="bottom" constant="10" id="TZD-ra-UWk"/>
                             <constraint firstItem="q0r-8L-Bx1" firstAttribute="leading" secondItem="6On-k4-La9" secondAttribute="leading" constant="24" id="UZF-bq-xUl"/>
                             <constraint firstItem="Olg-Bz-G06" firstAttribute="top" secondItem="6On-k4-La9" secondAttribute="top" constant="20" id="WG6-lt-tLa"/>
+                            <constraint firstItem="Tgg-ba-Si6" firstAttribute="centerY" secondItem="l27-5w-bqM" secondAttribute="centerY" id="gyV-BI-SHh"/>
                             <constraint firstItem="MAo-KW-Kc4" firstAttribute="top" secondItem="Wbp-ct-wEh" secondAttribute="bottom" constant="20" id="hi1-M4-B7A"/>
                             <constraint firstItem="q0r-8L-Bx1" firstAttribute="top" secondItem="cup-Gn-1Mf" secondAttribute="bottom" constant="4" id="j8G-TJ-4BB"/>
                             <constraint firstItem="IiM-rK-DGi" firstAttribute="top" secondItem="q0r-8L-Bx1" secondAttribute="bottom" constant="20" id="kYj-kP-MAt"/>
@@ -793,6 +811,7 @@
                         <outlet property="emailTextField" destination="pzq-Vy-ru1" id="uV6-o5-o6c"/>
                         <outlet property="memberRegistrationButton" destination="IiM-rK-DGi" id="St2-3i-Q39"/>
                         <outlet property="passwordTextField" destination="cup-Gn-1Mf" id="vKj-fO-Xy4"/>
+                        <outlet property="spinner" destination="Tgg-ba-Si6" id="LKz-xg-jZk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlM-R3-P9y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1705,6 +1724,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
